Greg: review this commit. Fixing stuff so I can complete checkout.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -601,11 +601,21 @@ entity.orderFulfillment.subtotal=Subtotal
 entity.orderFulfillment.tax=Tax
 entity.orderFulfillment.total=Fulfillment Total
 entity.orderFulfillmentShipping.discountAmount=Shipping Discount
-entity.orderPaymentCreditCard.creditCardNumber=Credit Card Number
-entity.orderPaymentCreditCard.securityCode=CVV Code
-entity.orderPaymentcreditcard.creditCardLastFour=Last Four
-entity.orderPaymentcreditcard.creditCardType=Credit Card Type
-entity.orderPaymentcreditcard.expirationDate=Expiration Date
+entity.orderPayment.amount=Amount
+entity.orderPayment.amountAuthorized=Amount Authorized
+entity.orderPayment.amountCharged=Amount Charged
+entity.orderPayment.amountRefunded=Amount Refunded
+entity.orderPayment.amountSettled=Amount Settled
+entity.orderPayment.billingAddress=Billing Address
+entity.orderPayment.creditCardNumber=Credit Card Number
+entity.orderPayment.creditCardLastFour=Last Four
+entity.orderPayment.creditCardType=Credit Card Type
+entity.orderPayment.expirationDate=Expiration Date
+entity.orderPayment.nameOnCreditCard=Name on Card
+entity.orderPayment.securityCode=CVV Code
+entity.orderPayment.order=Order
+entity.orderPayment.orderPaymentID=Order Payment ID
+entity.orderPayment.paymentMethod=Payment Method
 entity.order_plural=Orders
 entity.orderdelivery.orderdeliveryitems_validatehasorderdeliveryitems=No quantities from the orderfulfillment were indicated for delivery.
 entity.orderfulfillment=Order Fulfillment
@@ -628,16 +638,6 @@ entity.orderorigin=Order Origin
 entity.orderorigin.orderoriginname=Order Origin Name
 entity.orderorigin.orderorigintype=Order Origin Type
 entity.orderorigin_plural=Order Origins
-entity.orderpayment.amount=Amount
-entity.orderpayment.amountrefunded=Amount Refunded
-entity.orderpayment.order=Order
-entity.orderpayment.orderPaymentID=Order Payment ID
-entity.orderpayment.paymentMethod=Payment Method
-entity.orderpaymentcreditcard.amountAuthorized=Amount Authorized
-entity.orderpaymentcreditcard.amountCharged=Amount Charged
-entity.orderpaymentcreditcard.amountSettled=amountSettled
-entity.orderpaymentcreditcard.billingAddress=Billing Address
-entity.orderpaymentcreditcard.nameOnCreditCard=Name on Card
 entity.ordershipment.order=order
 entity.ordershipment.orderShipmentID=orderShipmentID
 entity.ordershipment.orderShipping=orderShipping
