working on payment stuff

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1186,6 +1186,9 @@ setting.globalURLKeyProduct=Product URL Key
 setting.globalURLKeyProductType=Product Type URL Key
 setting.globalUseProductCacheFlag=User Product Cache
 setting.globalWeightUnitCode=Weight Measurement Unit
+setting.paymentMethodStoreCreditCardNumberWithOrder=Store Credit Card Number With Order
+setting.paymentMethodStoreCreditCardNumberWithAccount=Store Credit Card Number With Account
+setting.paymentMethodCheckoutTransactionType=Checkout Transaction Type
 setting.productDisplayTemplate=Product Display Template
 setting.productDisplayTemplate_hint=The mura page that you would like to use as the template for displaying product on the front-end
 setting.productImageLargeHeight=Large Image Height
