Updated eventHandler, and started working on order detail.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -51,6 +51,8 @@ admin.main.dashboard.recentvendororderupdates=Recently Updated Vendor Orders
 admin.main.dashboard.recentvendorupdates=Recent Vendor Updates
 admin.main.default=Dashboard
 admin.order=Order Manager
+admin.order.ordertabs.orderfulfillments=Order Fulfillments
+admin.order.ordertabs.orderitems=Order Items
 admin.order_nav=Orders
 admin.pricing=Pricing Manager
 admin.pricing.deletepromotionperiod_disabled=This promotion period cannot be deleted because it has been used in a transtacion and/or it has expired.
@@ -301,6 +303,8 @@ entity.Address.norecords=No Addresses Defined
 entity.Order.fulfillmentTotal=Delivery Charges
 entity.Order.fulfillmenttotal=Fulfillment Amount
 entity.Order.orderTota=Order Total
+entity.Order.paymentAmountTotal=Total Payments
+entity.Order.paymentAuthorizedTotal=Authorized Amount
 entity.Order.previouslyrefundedfulfillment=Previously Refunded Fulfillment
 entity.Order.refundshippingamount=Refund Shipping Amount
 entity.Order.subtotal=Subtotal
@@ -589,6 +593,7 @@ entity.order.orderStatusType=Order Status
 entity.order.orderType=Order Type
 entity.order.orderid=Order ID
 entity.order.orderorigin=Order Origin
+entity.order.paymentAmountReceivedTotal=Received Amount
 entity.order.total=Total
 entity.orderDelivery=Order Delivery
 entity.orderDelivery.deliveryCloseDateTime=Delivery Close Date
@@ -607,15 +612,15 @@ entity.orderPayment.amountCharged=Amount Charged
 entity.orderPayment.amountRefunded=Amount Refunded
 entity.orderPayment.amountSettled=Amount Settled
 entity.orderPayment.billingAddress=Billing Address
-entity.orderPayment.creditCardNumber=Credit Card Number
 entity.orderPayment.creditCardLastFour=Last Four
+entity.orderPayment.creditCardNumber=Credit Card Number
 entity.orderPayment.creditCardType=Credit Card Type
 entity.orderPayment.expirationDate=Expiration Date
 entity.orderPayment.nameOnCreditCard=Name on Card
-entity.orderPayment.securityCode=CVV Code
 entity.orderPayment.order=Order
 entity.orderPayment.orderPaymentID=Order Payment ID
 entity.orderPayment.paymentMethod=Payment Method
+entity.orderPayment.securityCode=CVV Code
 entity.order_plural=Orders
 entity.orderdelivery.orderdeliveryitems_validatehasorderdeliveryitems=No quantities from the orderfulfillment were indicated for delivery.
 entity.orderfulfillment=Order Fulfillment
@@ -630,7 +635,8 @@ entity.orderitem.orderItemStatusType=orderItemStatusType
 entity.orderitem.orderShipment=orderShipment
 entity.orderitem.price=Price
 entity.orderitem.profile=profile
-entity.orderitem.quantity=Quantity Ordered
+entity.orderitem.quantity=Qty.
+entity.orderitem.quantityDelivered=Qty. Delivered
 entity.orderitem.status=Status
 entity.orderitem.stock=stock
 entity.orderitem.taxAmount=taxAmount
@@ -760,7 +766,7 @@ entity.product.shippingWeightUnitCode=Shipping Weight Unit of Measurement
 entity.product.shippingWeight_hint=Weight (in lbs) to be used to calculate shipping charges.
 entity.product.skus=skus
 entity.product.template=Design Template
-entity.product.title=Title
+entity.product.title=Product Title
 entity.product.trackinventoryflag=Track Inventory
 entity.product.urlTitle_validateUnique=This URL title is already in use.
 entity.product.webQC=webQC
@@ -1186,9 +1192,9 @@ setting.globalURLKeyProduct=Product URL Key
 setting.globalURLKeyProductType=Product Type URL Key
 setting.globalUseProductCacheFlag=User Product Cache
 setting.globalWeightUnitCode=Weight Measurement Unit
-setting.paymentMethodStoreCreditCardNumberWithOrder=Store Credit Card Number With Order
-setting.paymentMethodStoreCreditCardNumberWithAccount=Store Credit Card Number With Account
 setting.paymentMethodCheckoutTransactionType=Checkout Transaction Type
+setting.paymentMethodStoreCreditCardNumberWithAccount=Store Credit Card Number With Account
+setting.paymentMethodStoreCreditCardNumberWithOrder=Store Credit Card Number With Order
 setting.productDisplayTemplate=Product Display Template
 setting.productDisplayTemplate_hint=The mura page that you would like to use as the template for displaying product on the front-end
 setting.productImageLargeHeight=Large Image Height
