Multiple updates to the order admin

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -51,8 +51,10 @@ admin.main.dashboard.recentvendororderupdates=Recently Updated Vendor Orders
 admin.main.dashboard.recentvendorupdates=Recent Vendor Updates
 admin.main.default=Dashboard
 admin.order=Order Manager
+admin.order.ordertabs.orderdeliveries=Order Deliveries
 admin.order.ordertabs.orderfulfillments=Order Fulfillments
 admin.order.ordertabs.orderitems=Order Items
+admin.order.ordertabs.orderpayments=Order Payments
 admin.order_nav=Orders
 admin.pricing=Pricing Manager
 admin.pricing.deletepromotionperiod_disabled=This promotion period cannot be deleted because it has been used in a transtacion and/or it has expired.
@@ -310,6 +312,8 @@ entity.Order.refundshippingamount=Refund Shipping Amount
 entity.Order.subtotal=Subtotal
 entity.Order.taxtotal=Tax Total
 entity.Order.totalamounttoberefunded=Total Amount To Be Refunded
+entity.OrderDelivery_plural=Order Deliveries
+entity.OrderFulfillment.chargeAfterDiscount=Total Charge
 entity.PriceGroupRate.roundingRule=Rounding Rule
 entity.PromotionRewardProduct.brands=Brands
 entity.PromotionRewardProduct.itemDiscountType=Discount Type
@@ -624,22 +628,30 @@ entity.orderPayment.securityCode=CVV Code
 entity.order_plural=Orders
 entity.orderdelivery.orderdeliveryitems_validatehasorderdeliveryitems=No quantities from the orderfulfillment were indicated for delivery.
 entity.orderfulfillment=Order Fulfillment
+entity.orderfulfillment.discountAmount=Discounts
+entity.orderfulfillment.fulfillmentcharge=Fulfilment Charge
 entity.orderfulfillment.fulfillmentmethod=Fulfillment Method
 entity.orderfulfillment.fulfillmentmethod.shipping=Shipping
 entity.orderfulfillment.shippingaddress=Shipping Address
 entity.orderfulfillment_plural=Order Fulfillments
+entity.orderitem=Order Item
+entity.orderitem.discountAmount=Discounts
+entity.orderitem.extendedPriceAfterDiscount=Total
 entity.orderitem.extendedprice=Extended Price
 entity.orderitem.order=order
-entity.orderitem.orderItemID=orderItemID
-entity.orderitem.orderItemStatusType=orderItemStatusType
+entity.orderitem.orderItemID=Order Item ID
+entity.orderitem.orderItemStatusType=Order Item Status
 entity.orderitem.orderShipment=orderShipment
 entity.orderitem.price=Price
 entity.orderitem.profile=profile
 entity.orderitem.quantity=Qty.
 entity.orderitem.quantityDelivered=Qty. Delivered
+entity.orderitem.sku=Sku
 entity.orderitem.status=Status
 entity.orderitem.stock=stock
 entity.orderitem.taxAmount=taxAmount
+entity.orderitem_plura=Order Items
+entity.orderitem_plural=Order Items
 entity.orderorigin=Order Origin
 entity.orderorigin.orderoriginname=Order Origin Name
 entity.orderorigin.orderorigintype=Order Origin Type
@@ -659,6 +671,7 @@ entity.ordershipping.cost=cost
 entity.ordershipping.orderShippingID=orderShippingID
 entity.ordershipping.orderShippingItems=orderShippingItems
 entity.ordershipping.shippingMethod=shippingMethod
+entity.ordertiem=Order Item
 entity.paymentMethod.creditCard=Credit Card
 entity.paymentMethod.paymentMethodCode=Payment Method Code
 entity.paymentmethod=Payment Method
