More work on orders and comments

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -260,6 +260,7 @@ define.any=Any
 define.autoIncrement=Auto Increment
 define.backtolist=Back To List
 define.cancel=Cancel
+define.comments=Comments
 define.confirm=Confirm
 define.create=Create
 define.definedin=Defined In
@@ -302,6 +303,7 @@ define.username=Username
 define.weight=Weight
 define.yes=Yes
 entity.Address.norecords=No Addresses Defined
+entity.Comment.publicFlag=Public
 entity.Order.fulfillmentTotal=Delivery Charges
 entity.Order.fulfillmenttotal=Fulfillment Amount
 entity.Order.orderTota=Order Total
@@ -486,7 +488,9 @@ entity.category.allowProductAssignmentFlag=Allow Product Assignment
 entity.category.categoryName=Category Name
 entity.category.restrictAccessFlag=Restrict Access
 entity.category_plural=Categories
+entity.comment=Comment
 entity.comment.comment=Comment
+entity.comment_plural=Comments
 entity.content=Content
 entity.content.allowPurchaseFlag=Allow Purchase
 entity.content.allowPurchaseFlag_hint=Would you like to sell this content?
