More work on order admin.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -51,6 +51,7 @@ admin.main.dashboard.recentvendororderupdates=Recently Updated Vendor Orders
 admin.main.dashboard.recentvendorupdates=Recent Vendor Updates
 admin.main.default=Dashboard
 admin.order=Order Manager
+admin.order.orderfulfillmenttabs.orderfulfillmentitems=Order Fulfillment Items
 admin.order.ordertabs.orderdeliveries=Order Deliveries
 admin.order.ordertabs.orderfulfillments=Order Fulfillments
 admin.order.ordertabs.orderitems=Order Items
@@ -614,6 +615,7 @@ entity.orderFulfillment.subtotal=Subtotal
 entity.orderFulfillment.tax=Tax
 entity.orderFulfillment.total=Fulfillment Total
 entity.orderFulfillmentShipping.discountAmount=Shipping Discount
+entity.orderItem.quantityUndelivered=Qty. Undelivered
 entity.orderPayment.amount=Amount
 entity.orderPayment.amountAuthorized=Amount Authorized
 entity.orderPayment.amountCharged=Amount Charged
