Fixed Shipping Method Rate lookup, and integration settings.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -291,6 +291,7 @@ define.notapplicable=N/A
 define.notconfirmed=The value that was entered does not match the 'confirm' value.
 define.ok=Ok
 define.option=Option
+define.process=Process
 define.quantityshipped=Quantity Shipped
 define.rate=Rate
 define.save=Save
