Added the alternate sku code stuff, and also fixed the generic save method for entitys with data keys that are the same as the entityName.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -107,6 +107,7 @@ admin.product.producttypetabs.productsettings=Product Settings
 admin.product.producttypetabs.producttypedescription=Product Type Description
 admin.product.producttypetabs.producttypesettings=Product Type Settings
 admin.product.producttypetabs.skusettings=Sku Settings
+admin.product.skutabs.alternateskucodes=Alternate Sku Codes
 admin.product.skutabs.skusettings=Sku Settings
 admin.product_nav=Products
 admin.producttype.settingdefinedin=Setting Defined In
@@ -305,6 +306,10 @@ define.username=Username
 define.weight=Weight
 define.yes=Yes
 entity.Address.norecords=No Addresses Defined
+entity.AlternateSkuCode=Alternate Sku Code
+entity.AlternateSkuCode.alternateSkuCode=Sku Code
+entity.AlternateSkuCode.alternateSkuCodeType=Sku Code Type
+entity.AlternateSkuCode_plural=Alternate Sku Codes
 entity.Comment.publicFlag=Public
 entity.Order.fulfillmentTotal=Delivery Charges
 entity.Order.fulfillmenttotal=Fulfillment Amount
