Working on new process logic.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -27,6 +27,8 @@ admin.define.edit_title=Edit ${itemEntityName}
 admin.define.list=${itemEntityName} Listing
 admin.define.list_nav=${itemEntityNamePlural}
 admin.define.list_title=View A List of ${itemEntityNamePlural}
+admin.define.process=Process ${itemEntityName}
+admin.define.process_nav=Process ${itemEntityName}
 admin.define.save=Save ${itemEntityName}
 admin.define.save_error=There was an error trying to save the ${itemEntityName}.
 admin.define.save_nav=Save ${itemEntityName}
