Updates to the processing of order fulfillments

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -58,6 +58,7 @@ admin.order.ordertabs.orderdeliveries=Order Deliveries
 admin.order.ordertabs.orderfulfillments=Order Fulfillments
 admin.order.ordertabs.orderitems=Order Items
 admin.order.ordertabs.orderpayments=Order Payments
+admin.order.processorderfulfillment.processOption.locationID=Location ID
 admin.order_nav=Orders
 admin.pricing=Pricing Manager
 admin.pricing.deletepromotionperiod_disabled=This promotion period cannot be deleted because it has been used in a transtacion and/or it has expired.
@@ -294,6 +295,7 @@ define.notapplicable=N/A
 define.notconfirmed=The value that was entered does not match the 'confirm' value.
 define.ok=Ok
 define.option=Option
+define.print=Print
 define.process=Process
 define.quantityshipped=Quantity Shipped
 define.rate=Rate
@@ -307,6 +309,9 @@ define.unlimited=Unlimited
 define.username=Username
 define.weight=Weight
 define.yes=Yes
+email.deliveryconfirmation=Delivery Confirmation
+email.orderConfirmation=Order Confirmation
+email.orderDeliveryConfirmation=Order Delivery Confirmation
 entity.Address.norecords=No Addresses Defined
 entity.AlternateSkuCode=Alternate Sku Code
 entity.AlternateSkuCode.alternateSkuCode=Sku Code
@@ -1179,6 +1184,8 @@ frontend.checkout.processorder=Place Order
 frontend.checkout.saveaccount=Save & Continue
 frontend.checkout.saveshippingaddress=Save & Continue
 frontend.checkout.saveshippingmethod=Save & Continue
+print.packingSlip=Packing Slip
+print.packingslip=Packing Slip
 setting.brandDisplayTemplate=Brand Display Template
 setting.contentDefaultProductsPerPage=Products per page
 setting.contentDefaultProductsPerPage_hint=Default number of products per page
