--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -29,6 +29,7 @@ admin.define.list_nav=${itemEntityNamePlural}
 admin.define.list_title=View A List of ${itemEntityNamePlural}
 admin.define.process=Process ${itemEntityName}
 admin.define.process_nav=Process ${itemEntityName}
+admin.define.process_success=The ${itemEntityName} was process sucessfully
 admin.define.save=Save ${itemEntityName}
 admin.define.save_error=There was an error trying to save the ${itemEntityName}.
 admin.define.save_nav=Save ${itemEntityName}
@@ -59,6 +60,7 @@ admin.order.ordertabs.orderfulfillments=Order Fulfillments
 admin.order.ordertabs.orderitems=Order Items
 admin.order.ordertabs.orderpayments=Order Payments
 admin.order.processorderfulfillment.processOption.locationID=Location ID
+admin.order.processorderfulfillment.processOption.trackingNumber=Shipment Tracking Number
 admin.order_nav=Orders
 admin.pricing=Pricing Manager
 admin.pricing.deletepromotionperiod_disabled=This promotion period cannot be deleted because it has been used in a transtacion and/or it has expired.
