--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -29,7 +29,7 @@ admin.define.list_nav=${itemEntityNamePlural}
 admin.define.list_title=View A List of ${itemEntityNamePlural}
 admin.define.process=Process ${itemEntityName}
 admin.define.process_nav=Process ${itemEntityName}
-admin.define.process_success=The ${itemEntityName} was process sucessfully
+admin.define.process_success=The ${itemEntityName} was processed sucessfully
 admin.define.save=Save ${itemEntityName}
 admin.define.save_error=There was an error trying to save the ${itemEntityName}.
 admin.define.save_nav=Save ${itemEntityName}
