Working on auto fulfillment stuff on a call with sumit.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -139,6 +139,7 @@ admin.setting.fulfillmentmethodtypes.pickuptabs.settings=Settings
 admin.setting.fulfillmentmethodtypes.shippingtabs.settings=Settings
 admin.setting.fulfillmentmethodtypes.shippingtabs.shippingmethods=Shipping Methods
 admin.setting.listsettingtabs.brand=Brand Settings
+admin.setting.listsettingtabs.fulfillmentmethod=Fulfillment Method Settings
 admin.setting.listsettingtabs.global=Global Settings
 admin.setting.listsettingtabs.globaladvanced=Global Advanced Settings
 admin.setting.listsettingtabs.product=Product Settings
@@ -264,9 +265,7 @@ define.actions=Actions
 define.active=Active
 define.add=Add
 define.all=All
-define.fixedAmount=Fixed Amount
 define.amountOff=Amount Off
-define.percentageOff=Percentage Off
 define.any=Any
 define.autoIncrement=Auto Increment
 define.backtolist=Back To List
@@ -282,6 +281,7 @@ define.edit=Edit
 define.email=Email
 define.exportlist=Export List
 define.false=False
+define.fixedAmount=Fixed Amount
 define.general=General
 define.global=Global
 define.here=Here
@@ -301,6 +301,7 @@ define.notapplicable=N/A
 define.notconfirmed=The value that was entered does not match the 'confirm' value.
 define.ok=Ok
 define.option=Option
+define.percentageOff=Percentage Off
 define.print=Print
 define.process=Process
 define.quantityshipped=Quantity Shipped
@@ -727,8 +728,9 @@ entity.priceGroup.priceGroupID=Price Group ID
 entity.priceGroup.priceGroupName=Price Group Name
 entity.priceGroupRate=Price Group Rate
 entity.priceGroupRate.SKUs=Include SKUs
-entity.priceGroupRate.amountType=Rate Type
 entity.priceGroupRate.amount=Amount
+entity.priceGroupRate.amountType=Rate Type
+entity.priceGroupRate.appliesTo=Rate Applies To
 entity.priceGroupRate.delete_success=Price Group Rate Deleted
 entity.priceGroupRate.excludedProductTypes=Exclude Product Types
 entity.priceGroupRate.excludedProducts=Exclude Products
@@ -737,7 +739,6 @@ entity.priceGroupRate.globalFlag=Global Rate
 entity.priceGroupRate.priceGroupRateAppliesTo=Applies To
 entity.priceGroupRate.productTypes=Include Product Types
 entity.priceGroupRate.products=Include Products
-entity.priceGroupRate.appliesTo=Rate Applies To
 entity.priceGroupRate_plural=Price Group Rates
 entity.pricegroup.enabledOnAccount=Enabled
 entity.pricegroup.inheritsFrom=Inherits From
@@ -868,24 +869,24 @@ entity.promotionQualifier.qualifierType.fulfillment=Fulfillment
 entity.promotionQualifier.qualifierType.order=Order
 entity.promotionQualifier.qualifierType.product=Product
 entity.promotionReward=Promotion Reward
+entity.promotionReward.amount=Amount
+entity.promotionReward.amountType=Discount Type
 entity.promotionReward.delete_success=Promotion Reward Deleted
 entity.promotionReward.delete_validateisassigned=This promotion code cannot be deleted because it is in use.
-entity.promotionReward.amountType=Discount Type
-entity.promotionReward.amount=Amount
 entity.promotionReward.rewardType=Reward Type
 entity.promotionReward.rewardType.order=Order
 entity.promotionReward.rewardType.product=Product
 entity.promotionReward.rewardType.shipping=Shipping
 entity.promotionReward.rewards=Rewards
 entity.promotionRewardOrder=Order Promotion Reward
-entity.promotionRewardOrder.amountType=Discount Type
 entity.promotionRewardOrder.amount=Amount
+entity.promotionRewardOrder.amountType=Discount Type
 entity.promotionRewardOrder.rewardType=Reward Type
 entity.promotionRewardOrder.rewardTypeDisplay=Reward Type
 entity.promotionRewardOrder.rewards=Rewards
 entity.promotionRewardProduct=Product Promotion Reward
-entity.promotionRewardProduct.amountType=Discount Type
 entity.promotionRewardProduct.amount=Amount
+entity.promotionRewardProduct.amountType=Discount Type
 entity.promotionRewardProduct.excludedProductTypes=Product Type Exclusions
 entity.promotionRewardProduct.excludedProducts=Product Exclusions
 entity.promotionRewardProduct.excludedSkus=SKU Exclusions
@@ -900,8 +901,8 @@ entity.promotionRewardProduct.rewardTypeDisplay=Reward Type
 entity.promotionRewardProduct.rewards=Rewards
 entity.promotionRewardProduct.skus=Sku
 entity.promotionRewardShipping=Shipping Promotion Reward
-entity.promotionRewardShipping.amountType=Discount Type
 entity.promotionRewardShipping.amount=Amount
+entity.promotionRewardShipping.amountType=Discount Type
 entity.promotionRewardShipping.rewardType=Reward Type
 entity.promotionRewardShipping.rewardTypeDisplay=Reward Type
 entity.promotionRewardShipping.rewards=Rewards
@@ -1189,6 +1190,8 @@ setting.contentRestrictAccessFlag=Restrict access
 setting.contentRestrictAccessFlag_hint=Restrict access through subscription and/or purchase
 setting.contentRestrictedContentDisplayTemplate=Restricted Content template
 setting.contentRestrictedContentDisplayTemplate_hint=Barrier page or pay-wall template
+setting.fulfillmentMethodAutoLocation=Automatic Fulfillment Location
+setting.fulfillmentMethodAutoLocation_hint=This location will be used for an 'auto' fulfillment methods.  It can be overridden in each 'auto' fulfillment method if you create multiple
 setting.globalCurrencyLocale=Currency Locale
 setting.globalCurrencyType=Currency Type
 setting.globalDateFormat=Date Format
