more work on processing.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -61,6 +61,9 @@ admin.order.ordertabs.orderfulfillments=Order Fulfillments
 admin.order.ordertabs.orderitems=Order Items
 admin.order.ordertabs.orderpayments=Order Payments
 admin.order.processorderfulfillment.processOption.locationID=Location ID
+admin.order.processorderfulfillment.processOption.processCreditCard=Process Credit Card
+admin.order.processorderfulfillment.processOption.processCreditCard_hint=Selecting yes will process the credit card(s) on the order to receive payment for the amount of items being fulfilled if payment has not already been received.  If this is the first time a credit card is processed for a given fulfillment, it will also charge the cost of the fulfillment itself.
+admin.order.processorderfulfillment.processOption.quantity=Qty.
 admin.order.processorderfulfillment.processOption.trackingNumber=Shipment Tracking Number
 admin.order_nav=Orders
 admin.pricing=Pricing Manager
