--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1298,3 +1298,34 @@ validator.uppercase={objectValue} must be upper case.
 validator.url={objectValue} is an invalid URL.
 validator.uuid={objectValue} is an invalid UUID.
 validator.zipCode={objectValue} is an invalid zip code.
+entity.schedule=Schedule
+entity.Schedule.scheduleID=Schedule ID
+entity.Schedule.scheduleName=Schedule Name
+entity.Schedule.recuringType=Recurring Type
+entity.Schedule.recuringInterval=Recurring  Interval
+entity.Schedule.daysOfWeekToRun=Days of Week
+entity.Schedule.frequencyInterval=Frequency Interval
+entity.Schedule.frequencyStartTime=Start Time
+entity.Schedule.frequencyEndTime=End Time
+entity.schedule_plural=Schedules
+entity.task=Task
+entity.task.taskID=Task ID
+entity.task.taskName=Task Name
+entity.task.startdateTime=Task Start Date
+entity.task.enddateTime=Task End Date
+entity.task.timeouttime=Task Timeout
+entity.task.schedule=Task Schedule
+entity.Task.nextRunDateTime=Next Run
+entity.Task.runningFlag=Running
+entity.Task.timeout=Timeout
+entity.Task.notificationEmails=Notification Emails
+entity.Task.TaskUrl=Task URL
+entity.task_plural=Tasks
+entity.TaskHistory=Task History
+entity.TaskHistory.TaskhistoryID=Task History ID
+entity.TaskHistory.successFlag=Task Success
+entity.TaskHistory.message=Message
+entity.TaskHistory.startTime=Task Start Time
+entity.TaskHistory.endTime=Task End Time
+entity.TaskHistory_plural=Task Histories
+admin.setting.tasktabs.taskhistory=Task History
