payment processing updates.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -65,6 +65,8 @@ admin.order.processorderfulfillment.processOption.processCreditCard=Process Cred
 admin.order.processorderfulfillment.processOption.processCreditCard_hint=Selecting yes will process the credit card(s) on the order to receive payment for the amount of items being fulfilled if payment has not already been received.  If this is the first time a credit card is processed for a given fulfillment, it will also charge the cost of the fulfillment itself.
 admin.order.processorderfulfillment.processOption.quantity=Qty.
 admin.order.processorderfulfillment.processOption.trackingNumber=Shipment Tracking Number
+admin.order.processorderpayment.processOption.amount=Process Amount
+admin.order.processorderpayment.processOption.transactionType=Process Action
 admin.order_nav=Orders
 admin.pricing=Pricing Manager
 admin.pricing.deletepromotionperiod_disabled=This promotion period cannot be deleted because it has been used in a transtacion and/or it has expired.
