scheduler front end

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1331,3 +1331,15 @@ entity.TaskHistory.startTime=Task Start Time
 entity.TaskHistory.endTime=Task End Time
 entity.TaskHistory_plural=Task Histories
 admin.setting.tasktabs.taskhistory=Task History
+entity.taskschedule=Task Schedule
+entity.taskschedule_plural=Task Schedules
+admin.setting.tasktabs.taskschedule=Task Schedule
+entity.TaskSchedule.startDateTime=Start Date
+entity.TaskSchedule.endDateTime=End Date
+entity.TaskSchedule.nextRunDateTime=Next Run Time
+entity.TaskSchedule.successEmailList=Success Emails
+entity.TaskSchedule.failureEmailList=Failure Emails
+entity.TaskSchedule.schedule=Schedule
+entity.Schedule.daysOfMonthToRun=Days of Month
+entity.Task.taskMethod=Task Method
+entity.TaskHistory.response=Response
