Lot of Subscription stuff

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -430,13 +430,13 @@ entity.account.remoteContactID=Remote Contact ID
 entity.account.remoteCustomerID=Remote Customer ID
 entity.account.remoteEmployeeID=Remote Employee ID
 entity.account.type=Type
-entity.accountPaymentMethodCreditCard.accountPaymentMethodName=Payment Method Name
-entity.accountPaymentMethodCreditCard.creditCardLastFour=Credit Card
-entity.accountPaymentMethodCreditCard.creditCardNumber=Credit Card Number
-entity.accountPaymentMethodCreditCard.creditCardType=Card Type
-entity.accountPaymentMethodCreditCard.expirationMonth=Expiration Month
-entity.accountPaymentMethodCreditCard.expirationYear=Expiration Year
-entity.accountPaymentMethodCreditCard.nameOnCreditCard=Name On Card
+entity.accountPaymentMethod.accountPaymentMethodName=Payment Method Name
+entity.accountPaymentMethod.creditCardLastFour=Credit Card
+entity.accountPaymentMethod.creditCardNumber=Credit Card Number
+entity.accountPaymentMethod.creditCardType=Card Type
+entity.accountPaymentMethod.expirationMonth=Expiration Month
+entity.accountPaymentMethod.expirationYear=Expiration Year
+entity.accountPaymentMethod.nameOnCreditCard=Name On Card
 entity.account_plural=Accounts
 entity.accountaddress=Account Address
 entity.accountaddress.account=account
