--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1093,6 +1093,7 @@ entity.subscriptionBenefit.priceGroups=Price Groups
 entity.subscriptionBenefit.promotions=Promotions
 entity.subscriptionBenefit.subscriptionBenefitName=Subscription Benefit Name
 entity.subscriptionTerm.allowProrateFlag=Allow Prorate
+entity.subscriptionTerm.autoRenewFlag=Auto Renew
 entity.subscriptionTerm.autoRetryPaymentDays=Auto Retry After Days
 entity.subscriptionTerm.billedOnDayOfMonth=Bill On Day of Month
 entity.subscriptionTerm.gracePeriodTerm=Grace Period Term
