More work on Listing Display

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -294,6 +294,7 @@ define.edit=Edit
 define.email=Email
 define.exportlist=Export List
 define.false=False
+define.filter=Filter
 define.fixedAmount=Fixed Amount
 define.general=General
 define.global=Global
@@ -318,11 +319,14 @@ define.percentageOff=Percentage Off
 define.print=Print
 define.process=Process
 define.quantityshipped=Qty. Shipped
+define.range=Range
 define.rate=Rate
 define.save=Save
+define.search=Search
 define.select=Select
 define.selectall=Select All
 define.show=Show
+define.sort=Sort
 define.system=System
 define.true=True
 define.unlimited=Unlimited
