--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -440,6 +440,7 @@ entity.account.remoteContactID=Remote Contact ID
 entity.account.remoteCustomerID=Remote Customer ID
 entity.account.remoteEmployeeID=Remote Employee ID
 entity.account.type=Type
+entity.accountPaymentMethod=Account Payment Method
 entity.accountPaymentMethod.accountPaymentMethodName=Payment Method Name
 entity.accountPaymentMethod.creditCardLastFour=Credit Card
 entity.accountPaymentMethod.creditCardNumber=Credit Card Number
