working on subscription and payment views

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -8,6 +8,7 @@ admin.account.accounttabs.orders=Orders
 admin.account.accounttabs.pricegroups=Price Groups
 admin.account.accounttabs.productreviews=Product Reviews
 admin.account.accounttabs.paymentmethods=Payment Methods
+admin.account.accounttabs.subscriptions=Subscriptions
 admin.account_nav=Accounts
 admin.define.create=Create ${itemEntityName}
 admin.define.create_nav=Add ${itemEntityName}
@@ -1113,6 +1114,15 @@ entity.subscriptionbenefit=Subscription Benefit
 entity.subscriptionbenefit_plural=Subscription Benefits
 entity.subscriptionterm=Subscription Term
 entity.subscriptionterm_plural=Subscription Terms
+entity.subscriptionUsage=Subscription Usage
+entity.subscriptionUsage_plural=Subscription Usages
+entity.subscriptionUsage.allowProrateFlag=Allow Prorate
+entity.subscriptionUsage.autoRenewFlag=Auto Renew
+entity.subscriptionUsage.renewalPrice=Renewal Price
+entity.subscriptionUsage.nextBillDate=Next Bill Date
+entity.subscriptionUsage.subscriptionStatus=Status
+entity.subscriptionUsage.currentStatusType=Current Status
+entity.subscriptionUsage.subscriptionOrderItemName=Subscription Item
 entity.task=Task
 entity.task.enddateTime=Task End Date
 entity.task.schedule=Task Schedule
