Added content access view

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -130,6 +130,7 @@ admin.product.producttypetabs.skusettings=Sku Settings
 admin.product.skutabs.alternateskucodes=Alternate Sku Codes
 admin.product.skutabs.skusettings=Sku Settings
 admin.product.skutabs.subscription=Subscription
+admin.product.skutabs.accesscontents=Access Content
 admin.product_nav=Products
 admin.producttype.settingdefinedin=Setting Defined In
 admin.report=Reporting Services
