few page setting fixes and view

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -158,6 +158,7 @@ admin.setting.listsettingtabs.brand=Brand Settings
 admin.setting.listsettingtabs.fulfillmentmethod=Fulfillment Method Settings
 admin.setting.listsettingtabs.global=Global Settings
 admin.setting.listsettingtabs.globaladvanced=Global Advanced Settings
+admin.setting.listsettingtabs.globalpage=Global Page Settings
 admin.setting.listsettingtabs.product=Product Settings
 admin.setting.listsettingtabs.producttype=Product Type Settings
 admin.setting.listsettingtabs.shippingmethod=Shipping Method Settings
@@ -1259,6 +1260,12 @@ setting.globalOrderPlacedEmailBCC=New Order Placed Email BCC
 setting.globalOrderPlacedEmailCC=New Order Placed Email CC
 setting.globalOrderPlacedEmailFrom=New Order Placed Email From
 setting.globalOrderPlacedEmailSubjectString=New Order Placed Email Subject
+setting.globalPageShoppingCart=Shopping Cart Page
+setting.globalPageOrderStatus=Order Status Page
+setting.globalPageOrderConfirmation=Order Confirmation Page
+setting.globalPageMyAccount=My Account Page
+setting.globalPageCreateAccount=Create Account Page
+setting.globalPageCheckout=Checkout Page
 setting.globalRemoteIDEditFlag=Edit RemoteID Fields in Administration
 setting.globalRemoteIDShowFlag=View RemoteID Fields in Administrator
 setting.globalTimeFormat=Time Format
